--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,4 +9,10 @@ html {
   height: 100%;
 }
 
-
+.legend {
+  background-color: white;
+  padding : 10px;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 5px;
+}
