--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,12 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 5px;
 }
+
+.legend i {
+  width: 18px;
+  height :18px;
+  float: left;
+  margin-right: 8px;
+  background: red
+}
+
